// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> renders a button tile 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 2rem 2.4rem;
  color: #3e486e;
  font-weight: 600;
  font-size: 1.8rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

.c1 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

<div>
  <button
    class="c0"
    href=""
  >
    <div
      class="c1"
    >
      Hello !
    </div>
    
  </button>
</div>
`;

exports[`<Tile /> renders dark and small 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 1.6rem 2rem;
  color: #3e486e;
  font-weight: 600;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f2f5fa;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

.c1 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

<div>
  <button
    class="c0"
    href=""
  >
    <div
      class="c1"
    >
      Hello !
    </div>
    
  </button>
</div>
`;

exports[`<Tile /> renders with a div fake button inside 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c3:link,
.c3:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c3[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 2rem 2.4rem;
  color: #3e486e;
  font-weight: 600;
  font-size: 1.8rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

.c1 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

.c2 {
  margin-top: 2rem;
}

<div>
  <a
    class="c0"
    href="#"
  >
    <div
      class="c1"
    >
      Hello !
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        bouton
      </div>
    </div>
  </a>
</div>
`;

exports[`<Tile /> renders with an icon 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 2rem 2.4rem;
  color: #3e486e;
  font-weight: 600;
  font-size: 1.8rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

.c2 {
  display: block;
  max-width: 100%;
  padding-right: 1.6rem;
  overflow-y: auto;
}

.c1 {
  position: absolute;
  top: 0.4rem;
  right: 0.4rem;
}

<div>
  <button
    class="c0"
    href=""
  >
    <div
      class="c1"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="8"
          x2="21"
          y1="6"
          y2="6"
        />
        <line
          x1="8"
          x2="21"
          y1="12"
          y2="12"
        />
        <line
          x1="8"
          x2="21"
          y1="18"
          y2="18"
        />
        <line
          x1="3"
          x2="3"
          y1="6"
          y2="6"
        />
        <line
          x1="3"
          x2="3"
          y1="12"
          y2="12"
        />
        <line
          x1="3"
          x2="3"
          y1="18"
          y2="18"
        />
      </svg>
    </div>
    <div
      class="c2"
    >
      Hello !
    </div>
    
  </button>
</div>
`;
